Slides on gravity networks

--- a/lectures/1-relative-gravimeters/index.html
+++ b/lectures/1-relative-gravimeters/index.html
@@ -7,7 +7,7 @@
   <!-- TITLE OF THE PRESENTATION -->
   <!-- ============================================================ -->
   <title>
-    Relative gravimeters - ENVS258 Environmental Geophysics
+    Ground-based gravimetry - ENVS258 Environmental Geophysics
   </title>
   <!-- ============================================================ -->
 
